--- a/style/styles.css
+++ b/style/styles.css
@@ -122,7 +122,8 @@
   
   .slider-nav {
     position: fixed;      
-    left: 0;   
+    left: 5%;
+    right: 5%;
     display: grid;
     align-items: center;      
     justify-items: start; 
